apps/vmusic-fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmusic-fe
  namespace: haenu
  labels:
    app: vmusic-fe
spec:
  selector:
    matchLabels:
      app: vmusic-fe
  template:
    metadata:
      labels:
        app: vmusic-fe
    spec:
      containers:
      - name: vmusic-fe
        image: hyeonwoo5342/vmusic-fe:9
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '300Mi'
            cpu: '100m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
